[gd_scene load_steps=9 format=3 uid="uid://3b5rdxoob147"]

[ext_resource type="Script" uid="uid://2bm2y0fyngv2" path="res://scenes/blocks/editor.gd" id="1_omc7y"]
[ext_resource type="Texture2D" uid="uid://cd8hgpdr7atli" path="res://scenes/blocks/Pulley/images/1.png" id="2_omc7y"]
[ext_resource type="Script" uid="uid://d0hbi4vguc5oe" path="res://scenes/blocks/Pulley/pulley.gd" id="2_u2153"]
[ext_resource type="Script" uid="uid://cajdveyq5pg2t" path="res://scenes/blocks/attachment ray.gd" id="4_svsk0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u2153"]
radius = 34.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_omc7y"]
size = Vector2(24, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vkeng"]
size = Vector2(10, 230)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svsk0"]
size = Vector2(20, 5)

[node name="Node2D" type="Node2D" node_paths=PackedStringArray("ghostIconNode", "editorBarIconNode", "cloneEventsHere", "thingThatMoves", "UPDOWN_nodeToMove", "DOWNUP_nodeToMove", "LEFTRIGHT_nodeToMove") groups=["attaches to things", "pulley", "respawnOnPlayerDeath"]]
script = ExtResource("1_omc7y")
ghostIconNode = NodePath("movable/Sprite2D")
editorBarIconNode = NodePath("movable/Sprite2D")
collisionShapes = Array[CollisionShape2D]([Object(CollisionShape2D,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"physics_interpolation_mode":0,"auto_translate_mode":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"position":Vector2(1, 11),"rotation":0.0,"scale":Vector2(1, 1),"skew":0.0,"shape":SubResource("CircleShape2D_u2153"),"disabled":false,"one_way_collision":false,"one_way_collision_margin":1.0,"debug_color":Color(0, 1, 0, 0.419608),"script":null)
])
hidableSprites = Array[Node]([Object(Sprite2D,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"physics_interpolation_mode":0,"auto_translate_mode":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":true,"position":Vector2(1, 0),"rotation":0.0,"scale":Vector2(0.565528, 0.565528),"skew":0.0,"texture":ExtResource("2_omc7y"),"centered":true,"offset":Vector2(0, 0),"flip_h":false,"flip_v":false,"hframes":1,"vframes":1,"frame":0,"region_enabled":false,"region_rect":Rect2(0, 0, 0, 0),"region_filter_clip_enabled":false,"script":null)
])
cloneEventsHere = NodePath("movable")
thingThatMoves = NodePath("movable")
UPDOWN_nodeToMove = NodePath("movable")
DOWNUP_nodeToMove = NodePath("movable")
LEFTRIGHT_nodeToMove = NodePath("movable")

[node name="movable" type="Node2D" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("2_u2153")
root = NodePath("..")

[node name="Sprite2D" type="Sprite2D" parent="movable"]
use_parent_material = true
position = Vector2(1, 0)
scale = Vector2(0.565528, 0.565528)
texture = ExtResource("2_omc7y")

[node name="player detector" type="Area2D" parent="movable"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="movable/player detector"]
position = Vector2(1, 11)
shape = SubResource("CircleShape2D_u2153")
debug_color = Color(0, 1, 0, 0.419608)

[node name="has ceil" type="Area2D" parent="movable"]
light_mask = 0
position = Vector2(1, 0)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="movable/has ceil"]
position = Vector2(-1, -43)
shape = SubResource("RectangleShape2D_omc7y")

[node name="wall to side" type="Area2D" parent="movable"]
light_mask = 0
visibility_layer = 2
position = Vector2(1, 0)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="movable/wall to side"]
position = Vector2(28, 93.5)
shape = SubResource("RectangleShape2D_vkeng")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="movable/wall to side"]
position = Vector2(-30, 93.5)
shape = SubResource("RectangleShape2D_vkeng")

[node name="attach detector" type="Area2D" parent="." node_paths=PackedStringArray("rootNode")]
collision_layer = 0
collision_mask = 8
script = ExtResource("4_svsk0")
rootNode = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="attach detector"]
position = Vector2(0, -38.5)
shape = SubResource("RectangleShape2D_svsk0")
debug_color = Color(0.87451, 0.341176, 0, 0.419608)

[connection signal="body_entered" from="movable/player detector" to="movable" method="_on_player_detector_body_entered"]
[connection signal="body_entered" from="movable/has ceil" to="movable" method="_on_attach_detector_body_entered"]
[connection signal="body_exited" from="movable/has ceil" to="movable" method="_on_attach_detector_body_exited"]
[connection signal="body_entered" from="movable/wall to side" to="movable" method="_on_deattach_detector_body_entered"]
[connection signal="body_exited" from="movable/wall to side" to="movable" method="_on_deattach_detector_body_exited"]
